--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,7 +3,7 @@ development:
   server_url_https: https://www.versioneye.com
   s3_projects_bucket: veye_dev_projects
   s3_infographics_bucket: veye_dev_infographics
-  postmark_api_key:
+  postmark_api_key: <%= ENV['POSTMARK_API_KEY'] %>
   github_client_id: fecbf3c93f67f3a85489
   github_client_secret: 1bfa476846fa530e53b8c804f40a8d44ee030b3a
   github_user: xxxxxxxx
@@ -23,7 +23,7 @@ test:
   server_url_https: http://localhost:3000
   s3_projects_bucket: veye_test_projects
   s3_infographics_bucket: veye_test_infographics
-  postmark_api_key:
+  postmark_api_key: <%= ENV['POSTMARK_API_KEY'] %>
   github_client_id: 23baa3ad794ac9a9214b
   github_client_secret: bf2bc9df8933e9a1784bbcec2b46527b6e8098dd
   github_user: xxxxxxxx
