Small refactoring for bitbucket service specs

--- a/spec/fixtures/vcr_cassettes/bitbucket_user.yml
+++ b/spec/fixtures/vcr_cassettes/bitbucket_user.yml
@@ -8,15 +8,15 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Chrome28 (info@versioneye.com) (OAuth gem v0.4.7)
+      - Chrome28 (contact@versioneye.com) (OAuth gem v0.4.7)
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
       Authorization:
-      - OAuth oauth_consumer_key="HgSkE62pTT3HmxFGAm", oauth_nonce="qWJJFzRVqheqoPZT3VCrLj1polzeUWZ0dn5qKuFb4",
-        oauth_signature="lUjji0d%2BbFXd8PJ67jvmlSnuzYA%3D", oauth_signature_method="HMAC-SHA1",
-        oauth_timestamp="1387985932", oauth_token="YsR6vM5qxmfZtkYt9G", oauth_version="1.0"
+      - OAuth oauth_consumer_key="HgSkE62pTT3HmxFGAm", oauth_nonce="lN3HOfytmCGrc2Amua4oHGaixAmtzNLzT94bbGRDY",
+        oauth_signature="m7gMwFNNYl4pPfoyv1bIezulHeA%3D", oauth_signature_method="HMAC-SHA1",
+        oauth_timestamp="1388401922", oauth_token="YsR6vM5qxmfZtkYt9G", oauth_version="1.0"
   response:
     status:
       code: 200
@@ -25,7 +25,7 @@ http_interactions:
       Server:
       - nginx/1.5.3
       Date:
-      - Wed, 25 Dec 2013 15:38:52 GMT
+      - Mon, 30 Dec 2013 11:12:02 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -33,9 +33,9 @@ http_interactions:
       Connection:
       - keep-alive
       X-Served-By:
-      - app10
+      - app05
       X-Render-Time:
-      - '0.0220129489899'
+      - '0.0229239463806'
       Content-Language:
       - en
       X-Static-Version:
@@ -45,7 +45,7 @@ http_interactions:
       X-Version:
       - b2ac13e3a153
       X-Request-Count:
-      - '208'
+      - '49'
       X-Frame-Options:
       - SAMEORIGIN
       Strict-Transport-Security:
@@ -79,5 +79,5 @@ http_interactions:
         \"avatar\": \"https://secure.gravatar.com/avatar/ef4bc1256a1b06c7de9da2515680ceee?d=https%3A%2F%2Fd3oaxc4q5k2d6q.cloudfront.net%2Fm%2Fc4f05e63beb6%2Fimg%2Fdefault_avatar%2F32%2Fuser_blue.png&s=32\",
         \"resource_uri\": \"/1.0/users/versioneye_test\"}}"
     http_version: 
-  recorded_at: Wed, 25 Dec 2013 15:38:52 GMT
+  recorded_at: Mon, 30 Dec 2013 11:12:02 GMT
 recorded_with: VCR 2.8.0
