--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,67 +1,70 @@
+---
 development:
-  server_url: http://localhost:3000
-  server_url_https: https://www.versioneye.com
-  s3_projects_bucket: veye_dev_projects
-  s3_infographics_bucket: veye_dev_infographics
-  postmark_api_key: <%= ENV['POSTMARK_API_KEY'] %>
+  bitbucket_secret: yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ
+  bitbucket_token: HgSkE62pTT3HmxFGAm
+  cocoapods_spec: ~/cocoapods/cocoapods-specs
+  elasticsearch_product_index: product
+  elasticsearch_url: "localhost:9200"
+  elasticsearch_user_index: user
   github_client_id: fecbf3c93f67f3a85489
   github_client_secret: 1bfa476846fa530e53b8c804f40a8d44ee030b3a
-  github_user: xxxxxxxx
   github_pass: xxxxxxxx
-  bitbucket_token: HgSkE62pTT3HmxFGAm
-  bitbucket_secret: yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ
+  github_user: xxxxxxxx
+  memcache_password: ~
+  memcache_servers:
+    - "127.0.0.1:11211"
+  memcache_username: ~
+  postmark_api_key: "<%= ENV['POSTMARK_API_KEY'] %>"
+  s3_infographics_bucket: veye_dev_infographics
+  s3_projects_bucket: veye_dev_projects
+  server_url: "http://localhost:3000"
+  server_url_https: "https://www.versioneye.com"
   stripe_public_key: pk_06DKeCMLChVTScuOeH9Geig9PVwTM
   stripe_secret_key: sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr
-  elasticsearch_url: localhost:9200
-  elasticsearch_product_index: product
-  elasticsearch_user_index: user
-  memcache_servers: ["127.0.0.1:11211"]
-  memcache_username:
-  memcache_password:
-  cocoapods_spec: ~/cocoapods/cocoapods-specs
-
-test:
-  server_url: http://localhost:3000
-  server_url_https: http://localhost:3000
-  s3_projects_bucket: veye_test_projects
-  s3_infographics_bucket: veye_test_infographics
-  postmark_api_key: <%= ENV['POSTMARK_API_KEY'] %>
-  github_client_id: 23baa3ad794ac9a9214b
-  github_client_secret: bf2bc9df8933e9a1784bbcec2b46527b6e8098dd
-  github_user: xxxxxxxx
-  github_pass: xxxxxxxx
-  bitbucket_username: versioneye_test
-  bitbucket_password: qwerty12345
-  bitbucket_token: HgSkE62pTT3HmxFGAm
-  bitbucket_secret: yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ
-  stripe_public_key: pk_06DKeCMLChVTScuOeH9Geig9PVwTM
-  stripe_secret_key: sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr
-  elasticsearch_url: localhost:9200
-  elasticsearch_product_index: /product_test
-  elasticsearch_user_index: /user_test
-  memcache_servers: ["127.0.0.1:11211"]
-  memcache_username:
-  memcache_password:
-  cocoapods_spec: /home/versioneye/cocoapods/cocoapods-specs
 
 production:
-  server_url: http://www.versioneye.com
-  server_url_https: https://www.versioneye.com
-  s3_projects_bucket: veye_prod_projects
+  bitbucket_secret: "<%= ENV['BITBUCKET_SECRET'] %>"
+  bitbucket_token: "<%= ENV['BITBUCKET_TOKEN'] %>"
+  cocoapods_spec: "<%= ENV['COCOAPODS_SPEC'] %>"
+  elasticsearch_product_index: "<%= ENV['ELASTICSEARCH_PRODUCT_INDEX'] %>"
+  elasticsearch_url: "<%= ENV['ELASTICSEARCH_URL'] %>"
+  elasticsearch_user_index: "<%= ENV['ELASTICSEARCH_USER_INDEX'] %>"
+  github_client_id: "<%= ENV['GITHUB_CLIENT_ID'] %>"
+  github_client_secret: "<%= ENV['GITHUB_CLIENT_SECRET'] %>"
+  github_pass: "<%= ENV['GITHUB_PASS'] %>"
+  github_user: "<%= ENV['GITHUB_USER'] %>"
+  memcache_password: "<%= ENV['MEMCACHE_PASSWORD'] %>"
+  memcache_servers: "<%= ENV['MEMCACHE_SERVERS'] %>"
+  memcache_username: "<%= ENV['MEMCACHE_USERNAME'] %>"
+  postmark_api_key: "<%= ENV['POSTMARK_API_KEY'] %>"
   s3_infographics_bucket: veye_prod_infographics
-  postmark_api_key: <%= ENV['POSTMARK_API_KEY'] %>
-  github_client_id: <%= ENV['GITHUB_CLIENT_ID'] %>
-  github_client_secret: <%= ENV['GITHUB_CLIENT_SECRET'] %>
-  github_user: <%= ENV['GITHUB_USER'] %>
-  github_pass: <%= ENV['GITHUB_PASS'] %>
-  bitbucket_token: <%= ENV['BITBUCKET_TOKEN'] %>
-  bitbucket_secret: <%= ENV['BITBUCKET_SECRET'] %>
-  stripe_public_key: <%= ENV['STRIPE_PUBLIC_KEY'] %>
-  stripe_secret_key: <%= ENV['STRIPE_SECRET_KEY'] %>
-  elasticsearch_url: <%= ENV['ELASTICSEARCH_URL'] %>
-  elasticsearch_product_index: <%= ENV['ELASTICSEARCH_PRODUCT_INDEX'] %>
-  elasticsearch_user_index: <%= ENV['ELASTICSEARCH_USER_INDEX'] %>
-  memcache_servers: <%= ENV['MEMCACHE_SERVERS'] %>
-  memcache_username: <%= ENV['MEMCACHE_USERNAME'] %>
-  memcache_password: <%= ENV['MEMCACHE_PASSWORD'] %>
-  cocoapods_spec: <%= ENV['COCOAPODS_SPEC'] %>
+  s3_projects_bucket: veye_prod_projects
+  server_url: "http://www.versioneye.com"
+  server_url_https: "https://www.versioneye.com"
+  stripe_public_key: "<%= ENV['STRIPE_PUBLIC_KEY'] %>"
+  stripe_secret_key: "<%= ENV['STRIPE_SECRET_KEY'] %>"
+
+test:
+  bitbucket_password: qwerty12345
+  bitbucket_secret: yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ
+  bitbucket_token: HgSkE62pTT3HmxFGAm
+  bitbucket_username: versioneye_test
+  cocoapods_spec: /home/versioneye/cocoapods/cocoapods-specs
+  elasticsearch_product_index: /product_test
+  elasticsearch_url: "localhost:9200"
+  elasticsearch_user_index: /user_test
+  github_client_id: 23baa3ad794ac9a9214b
+  github_client_secret: bf2bc9df8933e9a1784bbcec2b46527b6e8098dd
+  github_pass: xxxxxxxx
+  github_user: xxxxxxxx
+  memcache_password: ~
+  memcache_servers:
+    - "127.0.0.1:11211"
+  memcache_username: ~
+  postmark_api_key: "<%= ENV['POSTMARK_API_KEY'] %>"
+  s3_infographics_bucket: veye_test_infographics
+  s3_projects_bucket: veye_test_projects
+  server_url: "http://localhost:3000"
+  server_url_https: "http://localhost:3000"
+  stripe_public_key: pk_06DKeCMLChVTScuOeH9Geig9PVwTM
+  stripe_secret_key: sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr
