--- a/config/settings.json
+++ b/config/settings.json
@@ -15,7 +15,7 @@
       "127.0.0.1:11211"
     ],
     "memcache_username": null,
-    "postmark_api_key": "<%= ENV['POSTMARK_API_KEY'] %>",
+    "postmark_api_key": "env_POSTMARK_API_KEY",
     "s3_infographics_bucket": "veye_dev_infographics",
     "s3_projects_bucket": "veye_dev_projects",
     "server_url": "http://localhost:3000",
@@ -41,7 +41,7 @@
       "127.0.0.1:11211"
     ],
     "memcache_username": null,
-    "postmark_api_key": "<%= ENV['POSTMARK_API_KEY'] %>",
+    "postmark_api_key": "env_POSTMARK_API_KEY",
     "s3_infographics_bucket": "veye_test_infographics",
     "s3_projects_bucket": "veye_test_projects",
     "server_url": "http://localhost:3000",
@@ -50,25 +50,25 @@
     "stripe_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr"
   },
   "production": {
-    "bitbucket_secret": "<%= ENV['BITBUCKET_SECRET'] %>",
-    "bitbucket_token": "<%= ENV['BITBUCKET_TOKEN'] %>",
-    "cocoapods_spec": "<%= ENV['COCOAPODS_SPEC'] %>",
-    "elasticsearch_product_index": "<%= ENV['ELASTICSEARCH_PRODUCT_INDEX'] %>",
-    "elasticsearch_url": "<%= ENV['ELASTICSEARCH_URL'] %>",
-    "elasticsearch_user_index": "<%= ENV['ELASTICSEARCH_USER_INDEX'] %>",
-    "github_client_id": "<%= ENV['GITHUB_CLIENT_ID'] %>",
-    "github_client_secret": "<%= ENV['GITHUB_CLIENT_SECRET'] %>",
-    "github_pass": "<%= ENV['GITHUB_PASS'] %>",
-    "github_user": "<%= ENV['GITHUB_USER'] %>",
-    "memcache_password": "<%= ENV['MEMCACHE_PASSWORD'] %>",
-    "memcache_servers": "<%= ENV['MEMCACHE_SERVERS'] %>",
-    "memcache_username": "<%= ENV['MEMCACHE_USERNAME'] %>",
-    "postmark_api_key": "<%= ENV['POSTMARK_API_KEY'] %>",
+    "bitbucket_secret": "env_BITBUCKET_SECRET",
+    "bitbucket_token": "env_BITBUCKET_TOKEN",
+    "cocoapods_spec": "env_COCOAPODS_SPEC",
+    "elasticsearch_product_index": "env_ELASTICSEARCH_PRODUCT_INDEX",
+    "elasticsearch_url": "env_ELASTICSEARCH_URL",
+    "elasticsearch_user_index": "env_ELASTICSEARCH_USER_INDEX",
+    "github_client_id": "env_GITHUB_CLIENT_ID",
+    "github_client_secret": "env_GITHUB_CLIENT_SECRET",
+    "github_pass": "env_GITHUB_PASS",
+    "github_user": "env_GITHUB_USER",
+    "memcache_password": "env_MEMCACHE_PASSWORD",
+    "memcache_servers": "env_MEMCACHE_SERVERS",
+    "memcache_username": "env_MEMCACHE_USERNAME",
+    "postmark_api_key": "env_POSTMARK_API_KEY",
     "s3_infographics_bucket": "veye_prod_infographics",
     "s3_projects_bucket": "veye_prod_projects",
     "server_url": "http://www.versioneye.com",
     "server_url_https": "https://www.versioneye.com",
-    "stripe_public_key": "<%= ENV['STRIPE_PUBLIC_KEY'] %>",
-    "stripe_secret_key": "<%= ENV['STRIPE_SECRET_KEY'] %>"
+    "stripe_public_key": "env_STRIPE_PUBLIC_KEY",
+    "stripe_secret_key": "env_STRIPE_SECRET_KEY"
   }
 }
