--- a/config/settings.json
+++ b/config/settings.json
@@ -21,7 +21,11 @@
     "server_url": "http://localhost:3000",
     "server_url_https": "https://www.versioneye.com",
     "stripe_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
-    "stripe_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr"
+    "stripe_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
+    "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
+    "smtp_port": "587",
+    "smtp_username": "env_SMTP_USER",
+    "smtp_password": "env_SMTP_PASS"
   },
   "test": {
     "bitbucket_password": "qwerty12345",
@@ -47,7 +51,11 @@
     "server_url": "http://localhost:3000",
     "server_url_https": "http://localhost:3000",
     "stripe_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
-    "stripe_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr"
+    "stripe_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
+    "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
+    "smtp_port": "587",
+    "smtp_username": "env_SMTP_USER",
+    "smtp_password": "env_SMTP_PASS"
   },
   "production": {
     "bitbucket_secret": "env_BITBUCKET_SECRET",
@@ -69,6 +77,10 @@
     "server_url": "http://www.versioneye.com",
     "server_url_https": "https://www.versioneye.com",
     "stripe_public_key": "env_STRIPE_PUBLIC_KEY",
-    "stripe_secret_key": "env_STRIPE_SECRET_KEY"
+    "stripe_secret_key": "env_STRIPE_SECRET_KEY",
+    "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
+    "smtp_port": "587",
+    "smtp_username": "env_SMTP_USER",
+    "smtp_password": "env_SMTP_PASS"
   }
 }
