--- a/config/settings.json
+++ b/config/settings.json
@@ -25,7 +25,12 @@
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
-    "smtp_password": "env_SMTP_PASS"
+    "smtp_password": "env_SMTP_PASS",
+    "aws_access_key_id": "env_AWS_S3_ACCESS_KEY_ID",
+    "aws_secret_access_key": "env_AWS_S3_SECRET_ACCESS_KEY",
+    "aws_s3_endpoint": "localhost",
+    "aws_s3_port": "4567",
+    "aws_use_ssl": false
   },
   "test": {
     "bitbucket_password": "qwerty12345",
@@ -55,7 +60,12 @@
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
-    "smtp_password": "env_SMTP_PASS"
+    "smtp_password": "env_SMTP_PASS",
+    "aws_access_key_id": "env_AWS_S3_ACCESS_KEY_ID",
+    "aws_secret_access_key": "env_AWS_S3_SECRET_ACCESS_KEY",
+    "aws_s3_endpoint": "localhost",
+    "aws_s3_port": "4567",
+    "aws_use_ssl": false
   },
   "production": {
     "bitbucket_secret": "env_BITBUCKET_SECRET",
@@ -81,6 +91,8 @@
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
-    "smtp_password": "env_SMTP_PASS"
+    "smtp_password": "env_SMTP_PASS",
+    "aws_access_key_id": "env_AWS_S3_ACCESS_KEY_ID",
+    "aws_secret_access_key": "env_AWS_S3_SECRET_ACCESS_KEY"
   }
 }
