--- a/config/aws.yml
+++ b/config/aws.yml
@@ -15,3 +15,10 @@ test:
 production:
   access_key_id: <%= ENV['AWS_S3_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AWS_S3_SECRET_ACCESS_KEY'] %>
+
+enterprise:
+  access_key_id: 'YOUR_ACCESS_KEY_ID'
+  secret_access_key: 'YOUR_SECRET_ACCESS_KEY'
+  s3_endpoint: 'localhost'
+  s3_port: 4567
+  use_ssl: false
