Add smtp_sender_name/email to settings.json

--- a/config/settings.json
+++ b/config/settings.json
@@ -26,6 +26,8 @@
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
     "smtp_password": "env_SMTP_PASS",
+    "smtp_sender_name": "VersionEye",
+    "smtp_sender_email": "notify@versioneye.com",
     "aws_s3_endpoint": "localhost",
     "aws_s3_port": 4567,
     "aws_use_ssl": false,
@@ -61,6 +63,8 @@
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
     "smtp_password": "env_SMTP_PASS",
+    "smtp_sender_name": "VersionEye",
+    "smtp_sender_email": "notify@versioneye.com",
     "aws_s3_endpoint": "localhost",
     "aws_s3_port": 4567,
     "aws_use_ssl": false,
@@ -92,6 +96,8 @@
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
     "smtp_password": "env_SMTP_PASS",
+    "smtp_sender_name": "VersionEye",
+    "smtp_sender_email": "notify@versioneye.com",
     "aws_s3_endpoint": "s3.amazonaws.com",
     "aws_s3_port": 443,
     "aws_use_ssl": true,
@@ -105,6 +111,8 @@
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
     "smtp_password": "env_SMTP_PASS",
+    "smtp_sender_name": "VersionEye",
+    "smtp_sender_email": "notify@versioneye.com",
     "elasticsearch_product_index": "/product_enterprise",
     "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "/user_enterprise",
