--- a/config/settings.json
+++ b/config/settings.json
@@ -19,6 +19,8 @@
     "s3_infographics_bucket": "veye_dev_infographics",
     "s3_projects_bucket": "veye_dev_projects",
     "server_url": "http://localhost:3000",
+    "server_host": "localhost",
+    "server_port": 3000,
     "stripe_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
     "stripe_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
@@ -55,6 +57,8 @@
     "s3_infographics_bucket": "veye_test_infographics",
     "s3_projects_bucket": "veye_test_projects",
     "server_url": "http://localhost:3000",
+    "server_host": "localhost",
+    "server_port": 3000,
     "stripe_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
     "stripe_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
@@ -87,6 +91,8 @@
     "s3_infographics_bucket": "veye_prod_infographics",
     "s3_projects_bucket": "veye_prod_projects",
     "server_url": "http://www.versioneye.com",
+    "server_host": "www.versioneye.com",
+    "server_port": 80,
     "stripe_public_key": "env_STRIPE_PUBLIC_KEY",
     "stripe_secret_key": "env_STRIPE_SECRET_KEY",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
@@ -102,7 +108,9 @@
     "aws_secret_access_key": "env_AWS_S3_SECRET_ACCESS_KEY"
   },
   "enterprise": {
-    "server_url": "http://www.versioneye.com",
+    "server_url": "http://localhost:3000",
+    "server_host": "localhost",
+    "server_port": 3000,
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
