--- a/config/settings.json
+++ b/config/settings.json
@@ -6,6 +6,7 @@
     "elasticsearch_product_index": "product",
     "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "user",
+    "github_api_url": "https://api.github.com",
     "github_client_id": "fecbf3c93f67f3a85489",
     "github_client_secret": "1bfa476846fa530e53b8c804f40a8d44ee030b3a",
     "github_pass": "xxxxxxxx",
@@ -44,6 +45,7 @@
     "elasticsearch_product_index": "/product_test",
     "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "/user_test",
+    "github_api_url": "https://api.github.com",
     "github_client_id": "23baa3ad794ac9a9214b",
     "github_client_secret": "bf2bc9df8933e9a1784bbcec2b46527b6e8098dd",
     "github_pass": "xxxxxxxx",
@@ -80,6 +82,7 @@
     "elasticsearch_product_index": "env_ELASTICSEARCH_PRODUCT_INDEX",
     "elasticsearch_url": "env_ELASTICSEARCH_URL",
     "elasticsearch_user_index": "env_ELASTICSEARCH_USER_INDEX",
+    "github_api_url": "https://api.github.com",
     "github_client_id": "env_GITHUB_CLIENT_ID",
     "github_client_secret": "env_GITHUB_CLIENT_SECRET",
     "github_pass": "env_GITHUB_PASS",
@@ -132,6 +135,7 @@
     "aws_use_ssl": false,
     "aws_access_key_id": "aws_bullshit_bingo_access_key",
     "aws_secret_access_key": "aws_bullshit_bingo_secret",
+    "github_api_url": "https://api.github.com",
     "github_client_id": "env_GITHUB_CLIENT_ID",
     "github_client_secret": "env_GITHUB_CLIENT_SECRET",
     "github_pass": "env_GITHUB_PASS",
