--- a/config/settings.json
+++ b/config/settings.json
@@ -1,5 +1,6 @@
 {
   "development": {
+    "nexus_url": "http://nexus.pro",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "cocoapods_spec": "~/cocoapods/cocoapods-specs",
@@ -37,6 +38,7 @@
     "aws_secret_access_key": "aws_bullshit_bingo_secret"
   },
   "test": {
+    "nexus_url": "http://nexus.pro",
     "bitbucket_password": "qwerty12345",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
@@ -76,6 +78,7 @@
     "aws_secret_access_key": "aws_bullshit_bingo_secret"
   },
   "production": {
+    "nexus_url": "http://nexus.pro",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
     "cocoapods_spec": "env_COCOAPODS_SPEC",
@@ -111,6 +114,7 @@
     "aws_secret_access_key": "env_AWS_S3_SECRET_ACCESS_KEY"
   },
   "enterprise": {
+    "nexus_url": "http://nexus.pro",
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
