#505 GitHub base url configurable

--- a/config/settings.json
+++ b/config/settings.json
@@ -7,6 +7,7 @@
     "elasticsearch_product_index": "product",
     "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "user",
+    "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
     "github_client_id": "fecbf3c93f67f3a85489",
     "github_client_secret": "1bfa476846fa530e53b8c804f40a8d44ee030b3a",
@@ -47,6 +48,7 @@
     "elasticsearch_product_index": "/product_test",
     "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "/user_test",
+    "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
     "github_client_id": "23baa3ad794ac9a9214b",
     "github_client_secret": "bf2bc9df8933e9a1784bbcec2b46527b6e8098dd",
@@ -85,6 +87,7 @@
     "elasticsearch_product_index": "env_ELASTICSEARCH_PRODUCT_INDEX",
     "elasticsearch_url": "env_ELASTICSEARCH_URL",
     "elasticsearch_user_index": "env_ELASTICSEARCH_USER_INDEX",
+    "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
     "github_client_id": "env_GITHUB_CLIENT_ID",
     "github_client_secret": "env_GITHUB_CLIENT_SECRET",
@@ -139,6 +142,7 @@
     "aws_use_ssl": false,
     "aws_access_key_id": "aws_bullshit_bingo_access_key",
     "aws_secret_access_key": "aws_bullshit_bingo_secret",
+    "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
     "github_client_id": "env_GITHUB_CLIENT_ID",
     "github_client_secret": "env_GITHUB_CLIENT_SECRET",
