#505 Make GitHub Web URL configurable

--- a/config/settings.json
+++ b/config/settings.json
@@ -142,8 +142,8 @@
     "aws_use_ssl": false,
     "aws_access_key_id": "aws_bullshit_bingo_access_key",
     "aws_secret_access_key": "aws_bullshit_bingo_secret",
-    "github_base_url": "https://github.com",
-    "github_api_url": "https://api.github.com",
+    "github_base_url": "http://192.168.0.15",
+    "github_api_url": "http://192.168.0.15/api/v3",
     "github_client_id": "env_GITHUB_CLIENT_ID",
     "github_client_secret": "env_GITHUB_CLIENT_SECRET",
     "github_pass": "env_GITHUB_PASS",
