--- a/config/settings.json
+++ b/config/settings.json
@@ -3,6 +3,7 @@
     "nexus_url": "http://nexus.pro",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
+    "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec": "~/cocoapods/cocoapods-specs",
     "elasticsearch_product_index": "product",
     "elasticsearch_url": "localhost:9200",
@@ -45,6 +46,7 @@
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "bitbucket_username": "versioneye_test",
     "bitbucket_password": "qwerty12345",
+    "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec": "/home/versioneye/cocoapods/cocoapods-specs",
     "elasticsearch_product_index": "/product_test",
     "elasticsearch_url": "localhost:9200",
@@ -85,6 +87,7 @@
     "nexus_url": "http://nexus.pro",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
+    "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec": "env_COCOAPODS_SPEC",
     "elasticsearch_product_index": "env_ELASTICSEARCH_PRODUCT_INDEX",
     "elasticsearch_url": "env_ELASTICSEARCH_URL",
@@ -153,6 +156,8 @@
     "github_pass": "env_GITHUB_PASS",
     "github_user": "env_GITHUB_USER",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
-    "bitbucket_token": "env_BITBUCKET_TOKEN"
+    "bitbucket_token": "env_BITBUCKET_TOKEN",
+    "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
+    "cocoapods_spec": "/mnt/cocoapods/cocoapods-specs"
   }
 }
