--- a/config/settings.json
+++ b/config/settings.json
@@ -4,6 +4,7 @@
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
+    "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "~/cocoapods/cocoapods-specs",
     "elasticsearch_product_index": "product",
     "elasticsearch_url": "localhost:9200",
@@ -46,6 +47,7 @@
     "bitbucket_username": "versioneye_test",
     "bitbucket_password": "qwerty12345",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
+    "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "/home/versioneye/cocoapods/cocoapods-specs",
     "elasticsearch_product_index": "/product_test",
     "elasticsearch_url": "localhost:9200",
@@ -86,6 +88,7 @@
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
+    "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "env_COCOAPODS_SPEC",
     "elasticsearch_product_index": "env_ELASTICSEARCH_PRODUCT_INDEX",
     "elasticsearch_url": "env_ELASTICSEARCH_URL",
@@ -155,6 +158,7 @@
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
+    "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "/mnt/cocoapods/cocoapods-specs"
   }
 }
