--- a/config/settings.json
+++ b/config/settings.json
@@ -28,6 +28,8 @@
     "server_port": 3000,
     "stripe_public_key": "pk_test_fqiaxitHBNHMLn3AV3SwHewl",
     "stripe_secret_key": "sk_test_Z7tjwMiOAqudeaULd20EwSLA",
+    "stripe_legacy_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
+    "stripe_legacy_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
@@ -71,6 +73,8 @@
     "server_port": 3000,
     "stripe_public_key": "pk_test_fqiaxitHBNHMLn3AV3SwHewl",
     "stripe_secret_key": "sk_test_Z7tjwMiOAqudeaULd20EwSLA",
+    "stripe_legacy_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
+    "stripe_legacy_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
@@ -110,6 +114,8 @@
     "server_port": 80,
     "stripe_public_key": "env_STRIPE_PUBLIC_KEY",
     "stripe_secret_key": "env_STRIPE_SECRET_KEY",
+    "stripe_legacy_public_key": "env_STRIPE_LEGACY_PUBLIC_KEY",
+    "stripe_legacy_secret_key": "env_STRIPE_LEGACY_SECRET_KEY",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
