--- a/config/settings.json
+++ b/config/settings.json
@@ -23,6 +23,7 @@
     "memcache_username": null,
     "s3_infographics_bucket": "veye_dev_infographics",
     "s3_projects_bucket": "veye_dev_projects",
+    "s3_receipt_bucket": "veye-dev-receipt",
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
@@ -68,6 +69,7 @@
     "memcache_username": null,
     "s3_infographics_bucket": "veye_test_infographics",
     "s3_projects_bucket": "veye_test_projects",
+    "s3_receipt_bucket": "veye-test-receipt",
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
@@ -109,6 +111,7 @@
     "memcache_username": "env_MEMCACHE_USERNAME",
     "s3_infographics_bucket": "veye_prod_infographics",
     "s3_projects_bucket": "veye_prod_projects",
+    "s3_receipt_bucket": "veye-prod-receipt",
     "server_url": "http://www.versioneye.com",
     "server_host": "www.versioneye.com",
     "server_port": 80,
