Add template for receipt

--- a/config/settings.json
+++ b/config/settings.json
@@ -31,6 +31,8 @@
     "stripe_secret_key": "sk_test_Z7tjwMiOAqudeaULd20EwSLA",
     "stripe_legacy_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
     "stripe_legacy_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
+    "receipt_content": "app/views/settings/payments/receipt_content.html.erb",
+    "receipt_footer": "app/views/settings/payments/receipt_footer.html",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
@@ -77,6 +79,8 @@
     "stripe_secret_key": "sk_test_Z7tjwMiOAqudeaULd20EwSLA",
     "stripe_legacy_public_key": "pk_06DKeCMLChVTScuOeH9Geig9PVwTM",
     "stripe_legacy_secret_key": "sk_06DKx0XR4WDt82u7Fy2ScGTmlBOQr",
+    "receipt_content": "app/views/settings/payments/receipt_content.html.erb",
+    "receipt_footer": "app/views/settings/payments/receipt_footer.html",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
@@ -119,6 +123,8 @@
     "stripe_secret_key": "env_STRIPE_SECRET_KEY",
     "stripe_legacy_public_key": "env_STRIPE_LEGACY_PUBLIC_KEY",
     "stripe_legacy_secret_key": "env_STRIPE_LEGACY_SECRET_KEY",
+    "receipt_content": "app/views/settings/payments/receipt_content.html.erb",
+    "receipt_footer": "app/views/settings/payments/receipt_footer.html",
     "smtp_address": "email-smtp.eu-west-1.amazonaws.com",
     "smtp_port": "587",
     "smtp_username": "env_SMTP_USER",
@@ -158,6 +164,8 @@
     "aws_use_ssl": false,
     "aws_access_key_id": "aws_bullshit_bingo_access_key",
     "aws_secret_access_key": "aws_bullshit_bingo_secret",
+    "receipt_content": "app/views/settings/payments/receipt_content.html.erb",
+    "receipt_footer": "app/views/settings/payments/receipt_footer.html",
     "github_base_url": "http://192.168.0.15",
     "github_api_url": "http://192.168.0.15/api/v3",
     "github_client_id": "env_GITHUB_CLIENT_ID",
