Change db connection for enterprise

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -125,7 +125,7 @@ enterprise:
       # Provides the hosts the default session can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
-        - localhost:27017
+        - <%= ENV['DB_PORT_27017_TCP_ADDR'] %>:<%= ENV['DB_PORT_27017_TCP_PORT'] %>
       options:
         # Change whether the session persists in safe mode by default.
         # (default: false)
