--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -125,7 +125,7 @@ enterprise:
       # Provides the hosts the default session can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
-        - <%= ENV['DB_PORT_27017_TCP_ADDR'] %>:<%= ENV['DB_PORT_27017_TCP_PORT'] %>
+        - <%= ENV['DB_PORT_27017_TCP_ADDR'] ||= 'localhost' %>:<%= ENV['DB_PORT_27017_TCP_PORT'] ||= '27017' %>
       options:
         # Change whether the session persists in safe mode by default.
         # (default: false)
