Add config for es

--- a/config/settings.json
+++ b/config/settings.json
@@ -10,6 +10,8 @@
     "elasticsearch_product_index": "product",
     "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "user",
+    "elasticsearch_addr": "localhost",
+    "elasticsearch_port": "9200",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
     "github_client_id": "fecbf3c93f67f3a85489",
@@ -59,6 +61,8 @@
     "elasticsearch_product_index": "/product_test",
     "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "/user_test",
+    "elasticsearch_addr": "localhost",
+    "elasticsearch_port": "9200",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
     "github_client_id": "23baa3ad794ac9a9214b",
@@ -105,6 +109,8 @@
     "cocoapods_spec": "env_COCOAPODS_SPEC",
     "elasticsearch_product_index": "env_ELASTICSEARCH_PRODUCT_INDEX",
     "elasticsearch_url": "env_ELASTICSEARCH_URL",
+    "elasticsearch_addr": "env_ES_PORT_9200_TCP_ADDR",
+    "elasticsearch_port": "env_ES_PORT_9200_TCP_PORT",
     "elasticsearch_user_index": "env_ELASTICSEARCH_USER_INDEX",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
@@ -154,8 +160,9 @@
     "smtp_sender_name": "VersionEye",
     "smtp_sender_email": "notify@versioneye.com",
     "elasticsearch_product_index": "/product_enterprise",
-    "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "/user_enterprise",
+    "elasticsearch_addr": "env_ES_PORT_9200_TCP_ADDR",
+    "elasticsearch_port": "env_ES_PORT_9200_TCP_PORT",
     "memcache_password": null,
     "memcache_servers": [
       "127.0.0.1:11211"
