Update versioneye-core and globalsettings

--- a/config/settings.json
+++ b/config/settings.json
@@ -8,7 +8,6 @@
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "~/cocoapods/cocoapods-specs",
     "elasticsearch_product_index": "product",
-    "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "user",
     "elasticsearch_addr": "localhost",
     "elasticsearch_port": "9200",
@@ -20,10 +19,9 @@
     "github_user": "xxxxxxxx",
     "projects_unlimited": false,
     "memcache_password": null,
-    "memcache_servers": [
-      "127.0.0.1:11211"
-    ],
     "memcache_username": null,
+    "memcache_addr": "localhost",
+    "memcache_port": "11211",
     "s3_infographics_bucket": "veye_dev_infographics",
     "s3_projects_bucket": "veye_dev_projects",
     "s3_receipt_bucket": "veye-dev-receipt",
@@ -59,7 +57,6 @@
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "/home/versioneye/cocoapods/cocoapods-specs",
     "elasticsearch_product_index": "/product_test",
-    "elasticsearch_url": "localhost:9200",
     "elasticsearch_user_index": "/user_test",
     "elasticsearch_addr": "localhost",
     "elasticsearch_port": "9200",
@@ -71,10 +68,9 @@
     "github_user": "testveye",
     "projects_unlimited": false,
     "memcache_password": null,
-    "memcache_servers": [
-      "127.0.0.1:11211"
-    ],
     "memcache_username": null,
+    "memcache_addr": "localhost",
+    "memcache_port": "11211",
     "s3_infographics_bucket": "veye_test_infographics",
     "s3_projects_bucket": "veye_test_projects",
     "s3_receipt_bucket": "veye-test-receipt",
@@ -108,10 +104,9 @@
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "env_COCOAPODS_SPEC",
     "elasticsearch_product_index": "env_ELASTICSEARCH_PRODUCT_INDEX",
-    "elasticsearch_url": "env_ELASTICSEARCH_URL",
+    "elasticsearch_user_index": "env_ELASTICSEARCH_USER_INDEX",
     "elasticsearch_addr": "env_ES_PORT_9200_TCP_ADDR",
     "elasticsearch_port": "env_ES_PORT_9200_TCP_PORT",
-    "elasticsearch_user_index": "env_ELASTICSEARCH_USER_INDEX",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
     "github_client_id": "env_GITHUB_CLIENT_ID",
@@ -119,9 +114,10 @@
     "github_pass": "env_GITHUB_PASS",
     "github_user": "env_GITHUB_USER",
     "projects_unlimited": false,
-    "memcache_password": "env_MEMCACHE_PASSWORD",
-    "memcache_servers": ["127.0.0.1:11211"],
     "memcache_username": "env_MEMCACHE_USERNAME",
+    "memcache_password": "env_MEMCACHE_PASSWORD",
+    "memcache_addr": "env_MC_PORT_11211_TCP_ADDR",
+    "memcache_port": "env_MC_PORT_11211_TCP_PORT",
     "s3_infographics_bucket": "veye_prod_infographics",
     "s3_projects_bucket": "veye_prod_projects",
     "s3_receipt_bucket": "veye-prod-receipt",
@@ -161,14 +157,12 @@
     "smtp_sender_email": "notify@versioneye.com",
     "elasticsearch_product_index": "/product_enterprise",
     "elasticsearch_user_index": "/user_enterprise",
-    "elasticsearch_url": "",
     "elasticsearch_addr": "env_ES_PORT_9200_TCP_ADDR",
     "elasticsearch_port": "env_ES_PORT_9200_TCP_PORT",
-    "memcache_password": null,
-    "memcache_servers": [
-      "127.0.0.1:11211"
-    ],
     "memcache_username": null,
+    "memcache_password": null,
+    "memcache_addr": "env_MC_PORT_11211_TCP_ADDR",
+    "memcache_port": "env_MC_PORT_11211_TCP_PORT",
     "s3_infographics_bucket": "veye_enterprise_infographics",
     "s3_projects_bucket": "veye_enterprise_projects",
     "aws_s3_endpoint": "localhost",
