--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -136,7 +136,7 @@ enterprise:
         # Change the default consistency model to :eventual or :strong.
         # :eventual will send reads to secondaries, :strong sends everything
         # to master. (default: :eventual)
-        consistency: :strong
+        consistency: :eventual
 
         # How many times Moped should attempt to retry an operation after
         # failure. (default: 30)
