--- a/config/settings.json
+++ b/config/settings.json
@@ -11,7 +11,7 @@
     "elasticsearch_user_index": "user",
     "elasticsearch_addr": "localhost",
     "elasticsearch_port": "9200",
-    "rabbitmq_addr": "localhost",
+    "rabbitmq_addr": "172.16.22.130",
     "rabbitmq_port": "5672",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
