--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -110,11 +110,18 @@ production:
 
         # How many times Moped should attempt to retry an operation after
         # failure. (default: 30)
-        # max_retries: 30
+        max_retries: 15
 
         # The time in seconds that Moped should wait before retrying an
         # operation on failure. (default: 1)
-        # retry_interval: 1
+        retry_interval: 1
+
+        # The default timeout is 5, which is the time in seconds for an operation to time out.
+        # We recommend 15 because it allows for plenty of time in most operating environments.
+        # Mongoid doubles the configured value (known issue) so 15 results in a timeout of 30s.
+        # Note that if you have a long-running query (over 30 seconds), it will time out.
+        # See our example for long-running queries in the blog post referenced above.
+        timeout: 15
 
 enterprise:
   # Configure available database sessions. (required)
@@ -140,8 +147,15 @@ enterprise:
 
         # How many times Moped should attempt to retry an operation after
         # failure. (default: 30)
-        # max_retries: 30
+        max_retries: 15
 
         # The time in seconds that Moped should wait before retrying an
         # operation on failure. (default: 1)
-        # retry_interval: 1
+        retry_interval: 1
+
+        # The default timeout is 5, which is the time in seconds for an operation to time out.
+        # We recommend 15 because it allows for plenty of time in most operating environments.
+        # Mongoid doubles the configured value (known issue) so 15 results in a timeout of 30s.
+        # Note that if you have a long-running query (over 30 seconds), it will time out.
+        # See our example for long-running queries in the blog post referenced above.
+        timeout: 15
