--- a/config/settings.json
+++ b/config/settings.json
@@ -60,8 +60,8 @@
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "/home/versioneye/cocoapods/cocoapods-specs",
-    "elasticsearch_product_index": "/product_test",
-    "elasticsearch_user_index": "/user_test",
+    "elasticsearch_product_index": "product_test",
+    "elasticsearch_user_index": "user_test",
     "elasticsearch_addr": "localhost",
     "elasticsearch_port": "9200",
     "rabbitmq_addr": "localhost",
